Search Filter Error Fix: Changed error message icon to times icon instead of checkmark and adjusted spacing of the container.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1997,6 +1997,9 @@ body.page-notebooks .carousel-caption h1.long-title {
         }
     }
 }
+.search-alerts-container .alert:last-child {
+    margin-bottom: -1em !important;
+}
 .search-title {
     color: #fff;
     text-shadow: 1px 1px 1px $text-color;
